# niro-backend

./: .gitignore  Cargo.toml  Dockerfile  TODO.md  fly.toml
.sqlx/: query-0085f3c6a10905dde31e8310d30556701a0af80e7914833c7c328852480e8861.json  query-00c2afff3f23c43fb6d02329b0fcb1aeb32395f12d79a184098bfcade2771785.json  query-01787bf402cf63c565b092d6c6d726636bdd5df87f6f8b39fbe1d0c422389618.json  query-031dde53a16564b81a57a1fd65b8766145c52581499972b563ff477df35e6e0f.json  query-03a416569672f0e35cc2cd1d2ea1b858f2921a037730355a55c11522cfa01334.json  query-0476c80844eda0892b57a936834d838779ef0794829dd1ee97a05731a691f592.json  query-0563d060c358d8ea667e43da1d73a601cf3d0322d5d90540d81c8bd1e42821d2.json  query-0591aedd98a2724f5d2fb68bb0299762c073e7ccbdac7bc00030d0ddd6775b82.json  query-0724030f96016b99c14a79770bda2161a7cb724843ea1a7fb6245a3b0494fb2c.json  query-0a19411152150519d561c499311ab40b72b794d77f73dd135fc365040449cb77.json  query-0a76c9034486026c65e8b0c94df0118353a56f47f0a03f1b43dc4d3027ca99e7.json  query-0ad6533156c2e58afe6ceccb34cb5198be428053c315ee5eb83256484fe186c1.json  query-0b543c462d0a5cc9679f79b68e41622183bd0ad52e9e158a89a5f16aee56e9a5.json  query-10f475d9930351c03ed5b9d29f9e4e0a4cc006c1976a019bc2d3274f7e69f377.json  query-1111cbc8b4be0868a48184b38223485aac5cf0af53854f9d387be8dc1214d9cc.json  query-13cdbd8f75983f284e73abcda32650e9fd61d07087440baadd4bd2700aaa654d.json  query-174c89f76d57a3d5cfb51941f4fd91cb5b34d45c769a1147e6ce319d04c9096e.json  query-1b3332a66a07d477f6d201a37547ed22dc0fdc11820207e45aba3b2d7210bc43.json  (+168 more)
migrations/: 20250721121415_create_user.sql  (+7 more)
(+34 files in other folders)
